# bulk-audit-ai

./: .env.example  .gitignore  APP_TOOLS_SUMMARY.txt  IDEAS.md  README.md  addresses.example.txt  docker-compose.yml  gap_probe.py  install_tools.sh  pyproject.toml  requirements.txt  run_vps.sh
backend/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
corpus/: README.md  example_precision_corpus.json
docs/: elite_phase5_benchmark.md  elite_phase6_bytecode.md  elite_phase7_bytecode_probes.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
tests/: test_access_control_inline_guard.py  test_aderyn_runner.py  test_ai_reviewer_guardrails.py  test_ai_reviewer_precision.py  test_analyzer_findings.py  test_arithmetic_noise.py  test_attack_class_detectors.py  test_bridge_accounting.py  test_bytecode_intel.py  test_bytecode_periphery.py  test_bytecode_probes.py  test_candidate_sanity.py  test_chain_attribution.py  test_classification.py  test_corpus_patterns.py  test_dedup.py  test_deployer_watch.py  test_detectors.py  test_economic_oracle_lending.py  test_enhancements_smoke.py  test_exploit_2026.py  test_exploit_benchmark.py  test_flashloan_governance.py  test_flashloan_sim.py  test_fuzzing.py  test_gap_backlog_batch1.py  test_gap_backlog_batch2.py  test_gap_backlog_batch3.py  test_gap_hunt_detectors.py  test_module_expansion.py  test_monitor.py  test_multichain.py  test_mythril_runner.py  test_oracle_sig_upgrades.py  test_phase10_semantic_hardening.py  test_phase10_semgrep_rules.py  test_poc_generator.py  (+25 more)
(+128 files in other folders)
